# OpenID-Connect-WASI-Hub

./: .clippy.toml  .env.template  .gitignore  Cargo.toml  DEV-LAUNCH.md  LICENSE-APACHE  LICENSE-MIT  MOTIVATION.md  README.md  cloudbuild.yaml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
crates/oidc-admin-wasi/: Cargo.toml  build.rs
crates/oidc-admin-wasi/src/: lib.rs  main.rs
crates/oidc-apikey/: Cargo.toml
crates/oidc-apikey/src/: auth.rs  endpoints.rs  hashing.rs  lib.rs  models.rs  service.rs
crates/oidc-core/: Cargo.toml
crates/oidc-core/src/: errors.rs  lib.rs
crates/oidc-core/src/models/: account_recovery_token.rs  address.rs  api_key.rs  audit_event.rs  auth_code.rs  authorization_detail.rs  client.rs  device_code.rs  email_verification_token.rs  federated_identity.rs  group.rs  identity_provider.rs  mod.rs  password_policy.rs  password_reset_token.rs  pushed_authorization_request.rs  realm.rs  realm_signing_keys.rs  response_type.rs  role.rs  scope.rs  session.rs  signing_key.rs  social_login_state.rs  user.rs
crates/oidc-core/src/models/mls/: group.rs  key_package.rs  mod.rs
crates/oidc-core/src/traits/: clock.rs  email.rs  hasher.rs  mocks.rs  mod.rs  noop_email.rs  repository.rs  token_service.rs
crates/oidc-core/src/utils/: acr.rs  html.rs  id.rs  jwe.rs  mod.rs  pkce.rs  proptest_tests.rs  time.rs  token.rs  validation.rs
crates/oidc-dev/: Cargo.toml
crates/oidc-dev/src/: main.rs
crates/oidc-migrate/: Cargo.toml
crates/oidc-migrate/src/: main.rs
crates/oidc-mls/: Cargo.toml
crates/oidc-mls/src/: commit_processor.rs  endpoints.rs  epoch_manager.rs  group_service.rs  key_package_store.rs  lib.rs  models.rs
crates/oidc-oidc/: Cargo.toml
crates/oidc-oidc/src/: errors.rs  lib.rs  session_cookie.rs  state.rs  validation.rs
crates/oidc-oidc/src/endpoints/: account_recovery.rs  authorize.rs  client_auth.rs  device_authorization.rs  discovery.rs  email_verification.rs  introspect.rs  jwks.rs  login.rs  logout.rs  mod.rs  par.rs  password_reset.rs  registration.rs  revoke.rs  social_login.rs  token.rs  userinfo.rs  webfinger.rs
crates/oidc-oidc/src/endpoints/session/: backchannel_logout.rs  check_session.rs  frontchannel_logout.rs  mod.rs
crates/oidc-oidc/src/flows/: authorization_code.rs  client_credentials.rs  device_code.rs  jwt_bearer.rs  mod.rs  password.rs  refresh_token.rs  token_exchange.rs
crates/oidc-oidc/src/tokens/: access_token.rs  dpop.rs  id_token.rs  jwt_service.rs  keygen.rs  mod.rs  refresh_token.rs  request_object.rs
crates/oidc-repository/: Cargo.toml
crates/oidc-repository/src/: connection.rs  lib.rs  mapper.rs  pool.rs
crates/oidc-repository/src/repositories/: account_recovery_token_repo.rs  api_key_repo.rs  audit_event_repo.rs  auth_code_repo.rs  client_repo.rs  device_code_repo.rs  email_verification_token_repo.rs  federated_identity_repo.rs  group_repo.rs  group_role_repo.rs  identity_provider_repo.rs  mls_group_repo.rs  mls_key_package_repo.rs  mls_member_repo.rs  mod.rs  par_repo.rs  password_reset_token_repo.rs  realm_repo.rs  realm_signing_keys_repo.rs  role_repo.rs  scope_repo.rs  session_repo.rs  signing_key_repo.rs  social_login_state_repo.rs  user_group_repo.rs  user_repo.rs  user_role_repo.rs
crates/oidc-wasm-dev/: Cargo.toml
crates/oidc-wasm-dev/src/: main.rs
crates/openid-connect-wasi/: Cargo.toml
crates/openid-connect-wasi/src/: error.rs  lib.rs  main.rs  state.rs
crates/openid-connect-wasi/src/middleware/: admin_auth.rs  auth.rs  cors.rs  csrf.rs  logging.rs  mod.rs  rate_limit.rs  security_headers.rs
crates/openid-connect-wasi/src/router/: admin.rs  apikey.rs  health.rs  mls.rs  mod.rs  oidc.rs
crates/openid-connect-wasi/src/router/admin/: audit.rs  clients.rs  mod.rs  realms.rs  users.rs
crates/openid-connect-wasi/src/server/: mod.rs  starter.rs
deploy/: proxy-cookbook.md
front/admin/: app.js  buildJs.js  dev.js  index.html  package-lock.json  package.json  playwright.config.js
load-tests/: README.md
load-tests/k6/: apikey.js  cloudbuild-loadtest.yaml  discovery.js  full-flow.js  parse-results.js  run-all.sh  smoke.js  token.js  userinfo.js
migrations/postgresql/: V10__auth_code_nonce.sql  V11__on_delete_cascades.sql  V12__add_missing_indexes.sql  V13__soft_deletes_and_fixes.sql  V14__session_user_id_nullable.sql  V15__scopes.sql  V16__realm_signing_keys.sql  V17__user_standard_claims.sql  V18__auth_code_claims_request.sql  V19__auth_code_response_type.sql  V1__init.sql  V20__client_auth_jwks.sql  V20__client_jwt_auth_columns.sql  V21__pushed_authorization_requests.sql  V22__session_management.sql  V23__pairwise_subject_identifiers.sql  V24__acr_amr.sql  V25__password_reset.sql  V26__email_verification.sql  V27__social_login_federation.sql  V28__device_authorization.sql  V2__oidc_tables.sql  V30__jarm.sql  V31__jwe_id_tokens.sql  V32__rar_authorization_details.sql  V33__resource_indicators.sql  V34__auth_code_claims_locales.sql  V35__user_address.sql  V36__rbac_roles_groups.sql  V37__realm_password_policy.sql  (+11 more)
plan/: 01-architecture.md  02-backend-plan.md  03-database-plan.md  04-oidc-plan.md  05-apikey-plan.md  06-mls-plan.md  07-frontend-plan.md  08-testing-plan.md  09-deployment-plan.md  10-master-checklist.md
scripts/: README.md  backup-db.sh  check-coverage.sh  deploy.sh  package-release.sh  rollback.sh
security/: README.md  zap-baseline.sh  zap-baseline.yaml  zap-config.conf
tests/integration/: Cargo.toml
tests/integration/src/: apikey_tests.rs  harness.rs  lib.rs  main.rs  security_tests.rs  social_login_tests.rs
tests/integration/src/admin_tests/: mod.rs  policy_tests.rs  rbac_tests.rs
tests/integration/src/db_tests/: mod.rs
tests/integration/src/endpoint_tests/: mod.rs
tests/integration/src/helpers/: app.rs  fixtures.rs  mod.rs
tests/integration/src/oidc_tests/: mod.rs
tests/integration/src/realm_oidc_tests/: mod.rs
tests/integration/src/repo_tests/: connection_wrapper.rs  extended.rs  lifecycle.rs  mod.rs  transaction.rs
tests/integration/src/scope_tests/: mod.rs
(+90 files in other folders)
