[workspace]
resolver = "2"
members = [
    "crates/oidc-core",
    "crates/oidc-repository",
    "crates/oidc-oidc",
    "crates/oidc-apikey",
    "crates/openid-connect-wasi",
    "crates/oidc-migrate",
    "crates/oidc-dev",
    "crates/oidc-wasm-dev",
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/openid_connect_wasi"

[workspace.dependencies]
# Async / WASI
wstd = "0.6"
wstd-axum = "0.6"
wasi = { version = "0.13", features = ["std"] }

# Web
axum = { version = "0.8", default-features = false, features = ["json", "matched-path", "original-uri", "query", "tower-log", "tracing"] }
tower = { version = "0.5", default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (pg_client)
wasi-pg-client = "0.1.1"

# Crypto
getrandom = "0.4"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
webpki-roots = "0.26"
sha2 = "0.10"
rsa = { version = "0.9", features = ["sha2", "pem"] }

# Utils
uuid = { version = "1", features = ["v4", "v7", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async traits
async-trait = "0.1"

# Auth / Hashing
argon2 = "0.5"
password-hash = "0.5"

# JWT (manual RS256 implementation for WASM compatibility)
base64 = "0.22"
hmac = "0.12"
subtle = "2"
pkcs8 = { version = "0.10", features = ["pem"] }

# Dev
tokio = { version = "1", features = ["rt", "macros", "time"] }

# Time / Random / Encoding
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["getrandom"] }
hex = "0.4"
