[workspace]
resolver = "2"
members = [
    "crates/oidc-core",
    "crates/oidc-repository",
    "crates/oidc-oidc",
    "crates/oidc-apikey",
    "crates/openid-connect-wasi",
    "crates/oidc-admin-wasi",
    "crates/oidc-migrate",
    "crates/oidc-dev",
    "crates/oidc-wasm-dev",
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Djudicael/OpenID-Connect-WASI-Hub"

[workspace.dependencies]
# Workspace crates
oidc-core = { version = "0.1.0", path = "crates/oidc-core" }
oidc-repository = { version = "0.1.0", path = "crates/oidc-repository" }
oidc-oidc = { version = "0.1.0", path = "crates/oidc-oidc" }
oidc-apikey = { version = "0.1.0", path = "crates/oidc-apikey" }
openid-connect-wasi = { version = "0.1.0", path = "crates/openid-connect-wasi" }
oidc-admin-wasi = { version = "0.1.0", path = "crates/oidc-admin-wasi" }

# Async / WASI
wstd = "0.6"
wstd-axum = "0.6"
wasi = { version = "0.14", features = ["std"] }

# Web
axum = { version = "0.8", default-features = false, features = ["json", "matched-path", "original-uri", "query", "tower-log", "tracing"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls-tls", "json"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Database (pg_client)
wasi-pg-client = "0.1.3"

# Crypto
getrandom = "0.4"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
webpki-roots = "0.26"
sha2 = "0.10"
rsa = { version = "0.9", features = ["sha2", "pem"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
aes-gcm = { version = "0.10", features = ["std"] }

# Utils
uuid = { version = "1", features = ["v4", "v7", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
urlencoding = "2"
hex = "0.4"

# Async traits
async-trait = "0.1"

# Auth / Hashing
argon2 = "0.5"
password-hash = "0.5"
base64 = "0.22"
hmac = "0.12"
subtle = "2"
pkcs8 = { version = "0.10", features = ["pem"] }

# Dev / Tooling
tokio = { version = "1", features = ["rt", "macros", "time"] }
dotenvy = "0.15"
portpicker = "0.1"
rustainers = "0.15"
nix = { version = "0.29", features = ["signal", "process"] }

# Time / Random / Encoding
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["getrandom"] }
