[package]
name = "oidc-apikey"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
oidc-core = { workspace = true }
oidc-repository = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
getrandom = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
wasi-pg-client = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasi-pg-client = { workspace = true, features = ["tokio-transport", "uuid", "chrono", "serde-json"] }

[dev-dependencies]
tokio = { workspace = true }
