[package]
name = "oidc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
getrandom = { workspace = true }
url = { workspace = true }
rsa = { workspace = true }
subtle = { workspace = true }
aes-gcm = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
tokio = { workspace = true }
