[package]
name = "oidc-migrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "oidc-migrate"
path = "src/main.rs"

[dependencies]
oidc-core = { workspace = true }
oidc-repository = { workspace = true }
wasi-pg-client = { workspace = true, features = ["tokio-transport"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
