[package]
name = "oidc-oidc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
oidc-core = { path = "../oidc-core" }
oidc-repository = { path = "../oidc-repository" }
axum = { workspace = true, features = ["form"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rsa = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
pkcs8 = { version = "0.10", features = ["pem"] }
async-trait = { workspace = true }
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { workspace = true }
urlencoding = "2"
serde_urlencoded = "0.7"
hex = "0.4"
aes-gcm = { version = "0.10", features = ["std"] }
url = "2"
hmac = "0.12"
subtle = "2"
wasi-pg-client = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wstd = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasi-pg-client = { workspace = true, features = ["tokio-transport", "uuid", "chrono", "serde-json"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

[dev-dependencies]
tokio = { workspace = true }
