[package]
name = "oidc-oidc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
oidc-core = { workspace = true }
oidc-repository = { workspace = true }
axum = { workspace = true, features = ["form"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
pkcs8 = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }
urlencoding = { workspace = true }
serde_urlencoded = { workspace = true }
hex = { workspace = true }
aes-gcm = { workspace = true }
url = { workspace = true }
hmac = { workspace = true }
subtle = { workspace = true }
wasi-pg-client = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wstd = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasi-pg-client = { workspace = true, features = ["tokio-transport", "uuid", "chrono", "serde-json"] }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
