[package]
name = "oidc-repository"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
oidc-core = { path = "../oidc-core" }
wasi-pg-client = { workspace = true, features = ["uuid", "chrono", "serde-json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasi-pg-client = { workspace = true, features = ["tokio-transport", "uuid", "chrono", "serde-json"] }
