[package]
name = "oidc-wasm-dev"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "oidc-wasm-dev"
path = "src/main.rs"

[dependencies]
# Dev orchestration (same as oidc-dev)
rustainers = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }

# Database
wasi-pg-client = { workspace = true, features = ["tokio-transport", "uuid", "chrono", "serde-json"] }

# Repository & API key layers
oidc-repository = { workspace = true }
oidc-apikey = { workspace = true }

# HTTP client for health checks
reqwest = { workspace = true }

# Port scanning
portpicker = { workspace = true }

# Workspace
oidc-core = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
