[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
openid-connect-wasi = { path = "../../crates/openid-connect-wasi" }
oidc-core = { path = "../../crates/oidc-core" }
oidc-repository = { path = "../../crates/oidc-repository" }
axum = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
http-body-util = "0.1"
