[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
openid-connect-wasi = { path = "../../crates/openid-connect-wasi" }
oidc-core = { path = "../../crates/oidc-core" }
oidc-repository = { path = "../../crates/oidc-repository" }
oidc-apikey = { path = "../../crates/oidc-apikey" }
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
http-body-util = "0.1"
wasi-pg-client = { workspace = true, features = ["tokio-transport", "uuid", "chrono", "serde-json"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

reqwest = { version = "0.12", features = ["json"] }
sha2 = { workspace = true }
base64 = { workspace = true }
urlencoding = "2"
url = "2"

# Test harness — container lifecycle via rustainers (testcontainers for Rust + Podman)
rustainers = "0.15"
