[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
openid-connect-wasi = { workspace = true }
oidc-core = { workspace = true }
oidc-repository = { workspace = true }
oidc-apikey = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
http-body-util = { workspace = true }
wasi-pg-client = { workspace = true, features = ["tokio-transport", "uuid", "chrono", "serde-json"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

reqwest = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
ed25519-dalek = { workspace = true }
pkcs8 = { workspace = true }

# Test harness — container lifecycle via rustainers (testcontainers for Rust + Podman)
rustainers = { workspace = true }
